Update the styles

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   max-width: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 header {
